Fix align

--- a/src/styles/pages/_Home.scss
+++ b/src/styles/pages/_Home.scss
@@ -5,7 +5,6 @@
 }
 
 .home-container {
-
   & article {
     display: flex;
     flex-direction: column;
@@ -51,7 +50,9 @@
   .home-container {
     display: flex;
     align-items: flex-end;
-
+    & article {
+      width: 80%;
+    }
     & h1 {
       font-size: 1.5rem;
       margin-bottom: 1rem;
@@ -61,10 +62,9 @@
     & p {
       font-size: 1.1rem;
       text-align: center;
-      padding: 0 10px;
-      margin: 0 0 25px 0;
+      height: 35px;
+      margin: 0 0 0 0;
     }
-
   }
 }
 
